<?xml version="1.0"?>
<package format="2">
  <name>camera</name>
  <version>0.0.1</version>
  <description>duckiebot camera node</description>

  <maintainer email="j.drew1303@gmail.com">James Drew</maintainer>
  <license>MIT</license>
  <author email="j.drew1303@gmail.com">James Drew</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export> </export>
</package>
