<?xml version="1.0"?>
<package format="2">
  <name>differential</name>
  <version>0.0.1</version>
  <description>duckiebot differential drive node</description>

  <maintainer email="j.drew1303@gmail.com">James Drew</maintainer>
  <license>MIT</license>
  <author email="j.drew1303@gmail.com">James Drew</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export> </export>
</package>
